--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.8"
     },
     "dependencies": {
+        "buefy": "^0.7.5",
         "bulma": "^0.7.4",
         "dropzone": "^5.5.1",
         "material-design-icons-iconfont": "^4.0.5",
